# ProductSample

./: README.md  settings.gradle
Logic/: CMakeLists.txt  build.gradle
Logic/src/main/: AndroidManifest.xml
Logic/src/main/java/com/sycho/logic/: Logic.kt
Logic/src/main/jni/: JniHelper.cpp  Logic.cpp  Logic.h
More/: build.gradle
More/src/full/res/layout/: activity_more.xml
More/src/main/: AndroidManifest.xml
More/src/main/java/com/sycho/more/widget/: TitleView.kt
More/src/main/res/layout/: widget_title_view.xml
More/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml
More/src/trial/: AndroidManifest.xml
More/src/trial/java/com/sycho/more/: MoreActivity.kt
More/src/trial/res/layout/: activity_more.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
